@@ -100,4 +100,10 @@ This Work includes contributions authored by David E. Jones, not as a
         <field name="propValue" type="text-medium"/>
         <relationship type="one" related-entity-name="moqui.tenant.TenantDataSource"/>
     </entity>
+    <entity entity-name="TenantHostDefault" package-name="moqui.tenant" group-name="tenantcommon">
+        <field name="hostName" type="text-medium" is-pk="true"/>
+        <field name="tenantId" type="id"/>
+        <field name="allowOverride" type="text-indicator"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+    </entity>
 </entities>
